Started Admin Controller and more GUI